--- a/style.css
+++ b/style.css
@@ -114,19 +114,18 @@
 }
 
 .devPic {
-    width: 30%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+    position: absolute;
+    bottom: 50px; /* Adjust as needed */
+    right: 50px; /* Adjust as needed */
+    width: 20%; /* Adjust size as needed */
 }
 
 .devPic img {
     width: 100%;
-    border-radius: 50%;
-    border: 5px solid red; /* Add a red border */
-    object-fit: cover; /* Ensure the image covers the circle */
+    
+}
+.container {
+    position: relative;
 }
 
 .contactform {
